igt@core_hotunplug@ subtests - dmesg-warn/dmesg-fail/incomplete/abort - WARNING: CPU: * PID: * at drivers/gpu/drm/xe/xe_pm, xe_pm_runtime_get_noresume
<6> [216.955058] xe 0000:00:02.0: [drm] GT0: using 65535 GUC ID(s)
<7> [216.967396] xe 0000:00:02.0: [drm:xe_guc_db_mgr_init [xe]] GT0: using 256 doorbell(s)
<6> [217.202731] xe 0000:00:02.0: [drm] GT0: GuC load failed: status = 0x800301EC
<6> [217.202752] xe 0000:00:02.0: [drm] GT0: GuC status: Reset = 0, BootROM = 0X76, UKernel = 0X1, MIA = 0X3, Auth = 0X2
<3> [217.265135] xe 0000:00:02.0: [drm] *ERROR* GT0: GuC mmio request 0x4100: no reply 0x4100
<3> [217.265557] xe 0000:00:02.0: probe with driver xe failed with error -110
<7> [217.280450] [IGT] core_hotunplug: late closing removed device instance
<5> [217.330888] pci 0000:00:02.0: [drm] Force wake domain (0) failed to ack sleep, ret=-110
<5> [217.380953] pci 0000:00:02.0: [drm] Force wake domain (1) failed to ack sleep, ret=-110
<5> [217.430989] pci 0000:00:02.0: [drm] Force wake domain (3) failed to ack sleep, ret=-110
<5> [217.481025] pci 0000:00:02.0: [drm] Force wake domain (5) failed to ack sleep, ret=-110
<5> [217.531060] pci 0000:00:02.0: [drm] Force wake domain (11) failed to ack sleep, ret=-110
<4> [217.531189] ------------[ cut here ]------------
<4> [217.531191] pci 0000:00:02.0: Missing outer runtime PM protection
<4> [217.531218] WARNING: CPU: 4 PID: 1231 at drivers/gpu/drm/xe/xe_pm.c:549 xe_pm_runtime_get_noresume+0x48/0x60 [xe]
<4> [217.531317] Modules linked in: hid_sensor_custom_intel_hinge hid_sensor_gyro_3d hid_sensor_magn_3d hid_sensor_als hid_sensor_accel_3d hid_sensor_incl_3d hid_sensor_rotation hid_sensor_trigger industrialio_triggered_buffer hid_sensor_iio_common kfifo_buf hid_sensor_custom industrialio hid_sensor_hub hid_generic intel_ishtp_hid hid snd_sof_pci_intel_tgl snd_sof_intel_hda_common snd_soc_hdac_hda snd_sof_pci snd_sof_xtensa_dsp snd_sof_intel_hda snd_sof snd_sof_utils snd_soc_acpi_intel_match snd_soc_acpi intel_uncore_frequency snd_intel_dspcfg intel_uncore_frequency_common snd_hda_codec x86_pkg_temp_thermal snd_hwdep intel_powerclamp snd_sof_intel_hda_mlink snd_hda_ext_core snd_hda_core coretemp snd_soc_core r8153_ecm snd_compress cdc_ether kvm_intel usbnet xe nls_iso8859_1 snd_pcm kvm drm_gpuvm crct10dif_pclmul gpu_sched crc32_pclmul drm_ttm_helper polyval_clmulni snd_seq polyval_generic ttm ghash_clmulni_intel cmdlinepart sha512_ssse3 i2c_algo_bit processor_thermal_device_pci sha256_ssse3 drm_suballoc_helper
<4> [217.531372] snd_seq_device spi_nor sha1_ssse3 mei_pxp mei_hdcp processor_thermal_device drm_exec snd_timer mtd processor_thermal_wt_hint aesni_intel intel_rapl_msr processor_thermal_rfim drm_display_helper crypto_simd spi_pxa2xx_platform processor_thermal_rapl cryptd drm_kunit_helpers intel_rapl_common dw_dmac rapl r8152 intel_cstate mii efi_pstore dw_dmac_core snd mei_me i2c_i801 processor_thermal_wt_req spi_intel_pci intel_ish_ipc e1000e idma64 soundcore drm_kms_helper spi_intel processor_thermal_power_floor i2c_smbus mei thunderbolt processor_thermal_mbox intel_ishtp kunit int340x_thermal_zone drm_buddy igen6_edac wmi_bmof intel_skl_int3472_tps68470 mac_hid tps68470_regulator clk_tps68470 video ov13858 v4l2_fwnode v4l2_async videodev intel_pmc_core mc wmi intel_skl_int3472_discrete int3400_thermal acpi_thermal_rel intel_vsec pinctrl_tigerlake pmt_telemetry intel_hid acpi_tad pmt_class sparse_keymap acpi_pad sch_fq_codel msr parport_pc ppdev lp parport drm ip_tables x_tables autofs4
<4> [217.531443] CPU: 4 PID: 1231 Comm: core_hotunplug Tainted: G U W 6.9.0-rc5-xe #1
<4> [217.531445] Hardware name: Intel Corporation Alder Lake Client Platform/AlderLake-P DDR5 RVP, BIOS RPLPFWI1.R00.4035.A00.2301200723 01/20/2023
<4> [217.531447] RIP: 0010:xe_pm_runtime_get_noresume+0x48/0x60 [xe]
<4> [217.531506] Code: cc cc cc 48 8b 7b 08 4c 8b 67 50 4d 85 e4 75 03 4c 8b 27 e8 0a 93 fb e0 4c 89 e2 48 c7 c7 98 5c f8 a0 48 89 c6 e8 c8 ff 3a e0 <0f> 0b 48 8b 43 08 f0 ff 80 f8 02 00 00 5b 41 5c 5d c3 cc cc cc cc
<4> [217.531508] RSP: 0018:ffffc90004493a50 EFLAGS: 00010286
<4> [217.531510] RAX: 0000000000000000 RBX: ffff88811e4c0000 RCX: c0000000ffff7fff
<4> [217.531512] RDX: 0000000000000004 RSI: 00000000ffff7fff RDI: 0000000000000001
<4> [217.531513] RBP: ffffc90004493a60 R08: 0000000000000000 R09: 00000000ffff7fff
<4> [217.531515] R10: ffffc90004493838 R11: ffff8884afafdfe8 R12: ffff88810477d990
<4> [217.531516] R13: 0000000000000001 R14: ffff8881185f6248 R15: dead000000000100
<4> [217.531517] FS: 00007f981af8b140(0000) GS:ffff88849f000000(0000) knlGS:0000000000000000
<4> [217.531519] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [217.531521] CR2: 000055a77e6091c0 CR3: 00000001c674c000 CR4: 0000000000750ef0
<4> [217.531522] PKRU: 55555554
<4> [217.531523] Call Trace:
<4> [217.531525] <TASK>
<4> [217.531526] ? show_regs+0x67/0x70
<4> [217.531531] ? xe_pm_runtime_get_noresume+0x48/0x60 [xe]
<4> [217.531584] ? __warn+0x8e/0x1b0
<4> [217.531589] ? xe_pm_runtime_get_noresume+0x48/0x60 [xe]
<4> [217.531641] ? report_bug+0x1b7/0x1d0
<4> [217.531646] ? handle_bug+0x46/0x80
<4> [217.531650] ? exc_invalid_op+0x19/0x70
<4> [217.531653] ? asm_exc_invalid_op+0x1b/0x20
<4> [217.531660] ? xe_pm_runtime_get_noresume+0x48/0x60 [xe]
<4> [217.531711] xe_ggtt_remove_node+0x28/0x90 [xe]
<4> [217.531770] xe_ggtt_remove_bo+0x59/0x1d0 [xe]
<4> [217.531815] ? _raw_write_unlock+0x23/0x50
<4> [217.531818] ? drm_vma_offset_remove+0x66/0x80 [drm]
<4> [217.531858] xe_ttm_bo_destroy+0x135/0x230 [xe]
<4> [217.531898] ttm_bo_release+0x6e/0x320 [ttm]
<4> [217.531908] ? vunmap+0x4c/0x70
<4> [217.531914] ttm_bo_put+0x34/0x50 [ttm]
<4> [217.531921] xe_gem_object_free+0x1b/0x30 [xe]
<4> [217.531959] drm_gem_object_free+0x1a/0x30 [drm]
<4> [217.531990] __xe_bo_unpin_map_no_vm+0x78/0x90 [xe]
<4> [217.532027] drm_managed_release+0xa9/0x160 [drm]
<4> [217.532055] drm_dev_release+0x38/0x50 [drm]
<4> [217.532080] drm_minor_release+0x39/0x50 [drm]
<4> [217.532101] drm_release_noglobal+0x6c/0x80 [drm]
<4> [217.532125] __fput+0xb9/0x310
<4> [217.532129] __fput_sync+0x1a/0x20
<4> [217.532131] __x64_sys_close+0x3e/0x80
<4> [217.532134] x64_sys_call+0x18e6/0x20c0
<4> [217.532137] do_syscall_64+0x88/0x140
<4> [217.532142] ? syscall_exit_to_user_mode+0xea/0x260
<4> [217.532146] ? do_syscall_64+0x94/0x140
<4> [217.532148] ? do_syscall_64+0x94/0x140
<4> [217.532151] ? restore_fpregs_from_fpstate+0x47/0xc0
<4> [217.532155] ? switch_fpu_return+0xd7/0x130
<4> [217.532158] ? syscall_exit_to_user_mode+0xea/0x260
<4> [217.532160] ? do_syscall_64+0x94/0x140
<4> [217.532163] ? do_syscall_64+0x94/0x140
<4> [217.532165] ? exc_page_fault+0xaa/0x2a0
<4> [217.532167] entry_SYSCALL_64_after_hwframe+0x76/0x7e
<4> [217.532170] RIP: 0033:0x7f981e2e0437
<4> [217.532173] Code: 64 89 02 48 c7 c0 ff ff ff ff eb bb 0f 1f 80 00 00 00 00 f3 0f 1e fa 64 8b 04 25 18 00 00 00 85 c0 75 10 b8 03 00 00 00 0f 05 <48> 3d 00 f0 ff ff 77 41 c3 48 83 ec 18 89 7c 24 0c e8 f3 fb ff ff
<4> [217.532174] RSP: 002b:00007ffd88658f08 EFLAGS: 00000246 ORIG_RAX: 0000000000000003
<4> [217.532176] RAX: ffffffffffffffda RBX: 00007f981af8b070 RCX: 00007f981e2e0437
<4> [217.532178] RDX: 0000000000000000 RSI: 000055ab20762c44 RDI: 0000000000000005
<4> [217.532179] RBP: 0000000000000005 R08: 0000000000000000 R09: 000000000000003e
<4> [217.532180] R10: 000055ab207623f1 R11: 0000000000000246 R12: 000055ab20762c44
<4> [217.532181] R13: 00007ffd88659210 R14: 0000000000000000 R15: 0000000000000000
<4> [217.532186] </TASK>
<4> [217.532187] irq event stamp: 307257
<4> [217.532188] hardirqs last enabled at (307263): [<ffffffff811b69ca>] console_unlock+0x13a/0x150
<4> [217.532192] hardirqs last disabled at (307268): [<ffffffff811b69af>] console_unlock+0x11f/0x150
<4> [217.532194] softirqs last enabled at (307018): [<ffffffff823cab46>] __do_softirq+0x316/0x441
<4> [217.532196] softirqs last disabled at (307013): [<ffffffff810f042b>] irq_exit_rcu+0x8b/0xb0
<4> [217.532200] ---[ end trace 0000000000000000 ]---
<5> [217.583415] pci 0000:00:02.0: [drm] Force wake domain (0) failed to ack sleep, ret=-110
<4> [217.583844] ------------[ cut here ]------------
<4> [217.583846] pci 0000:00:02.0: Missing outer runtime PM protection
<4> [217.583868] WARNING: CPU: 4 PID: 1231 at drivers/gpu/drm/xe/xe_pm.c:549 xe_pm_runtime_get_noresume+0x48/0x60 [xe]
<4> [217.583934] Modules linked in: hid_sensor_custom_intel_hinge hid_sensor_gyro_3d hid_sensor_magn_3d hid_sensor_als hid_sensor_accel_3d hid_sensor_incl_3d hid_sensor_rotation hid_sensor_trigger industrialio_triggered_buffer hid_sensor_iio_common kfifo_buf hid_sensor_custom industrialio hid_sensor_hub hid_generic intel_ishtp_hid hid snd_sof_pci_intel_tgl snd_sof_intel_hda_common snd_soc_hdac_hda snd_sof_pci snd_sof_xtensa_dsp snd_sof_intel_hda snd_sof snd_sof_utils snd_soc_acpi_intel_match snd_soc_acpi intel_uncore_frequency snd_intel_dspcfg intel_uncore_frequency_common snd_hda_codec x86_pkg_temp_thermal snd_hwdep intel_powerclamp snd_sof_intel_hda_mlink snd_hda_ext_core snd_hda_core coretemp snd_soc_core r8153_ecm snd_compress cdc_ether kvm_intel usbnet xe nls_iso8859_1 snd_pcm kvm drm_gpuvm crct10dif_pclmul gpu_sched crc32_pclmul drm_ttm_helper polyval_clmulni snd_seq polyval_generic ttm ghash_clmulni_intel cmdlinepart sha512_ssse3 i2c_algo_bit processor_thermal_device_pci sha256_ssse3 drm_suballoc_helper
<4> [217.583980] snd_seq_device spi_nor sha1_ssse3 mei_pxp mei_hdcp processor_thermal_device drm_exec snd_timer mtd processor_thermal_wt_hint aesni_intel intel_rapl_msr processor_thermal_rfim drm_display_helper crypto_simd spi_pxa2xx_platform processor_thermal_rapl cryptd drm_kunit_helpers intel_rapl_common dw_dmac rapl r8152 intel_cstate mii efi_pstore dw_dmac_core snd mei_me i2c_i801 processor_thermal_wt_req spi_intel_pci intel_ish_ipc e1000e idma64 soundcore drm_kms_helper spi_intel processor_thermal_power_floor i2c_smbus mei thunderbolt processor_thermal_mbox intel_ishtp kunit int340x_thermal_zone drm_buddy igen6_edac wmi_bmof intel_skl_int3472_tps68470 mac_hid tps68470_regulator clk_tps68470 video ov13858 v4l2_fwnode v4l2_async videodev intel_pmc_core mc wmi intel_skl_int3472_discrete int3400_thermal acpi_thermal_rel intel_vsec pinctrl_tigerlake pmt_telemetry intel_hid acpi_tad pmt_class sparse_keymap acpi_pad sch_fq_codel msr parport_pc ppdev lp parport drm ip_tables x_tables autofs4
<4> [217.584031] CPU: 4 PID: 1231 Comm: core_hotunplug Tainted: G U W 6.9.0-rc5-xe #1
<4> [217.584033] Hardware name: Intel Corporation Alder Lake Client Platform/AlderLake-P DDR5 RVP, BIOS RPLPFWI1.R00.4035.A00.2301200723 01/20/2023
<4> [217.584034] RIP: 0010:xe_pm_runtime_get_noresume+0x48/0x60 [xe]
<4> [217.584074] Code: cc cc cc 48 8b 7b 08 4c 8b 67 50 4d 85 e4 75 03 4c 8b 27 e8 0a 93 fb e0 4c 89 e2 48 c7 c7 98 5c f8 a0 48 89 c6 e8 c8 ff 3a e0 <0f> 0b 48 8b 43 08 f0 ff 80 f8 02 00 00 5b 41 5c 5d c3 cc cc cc cc
<4> [217.584075] RSP: 0018:ffffc90004493960 EFLAGS: 00010282
<4> [217.584077] RAX: 0000000000000000 RBX: ffff88811e4c0000 RCX: 0000000000000027
<4> [217.584078] RDX: 0000000000000027 RSI: 00000000ffff7fff RDI: ffff88849f031a48
<4> [217.584079] RBP: ffffc90004493970 R08: 0000000000000000 R09: 00000000ffff7fff
<4> [217.584080] R10: ffffc90004493748 R11: ffff8884afafdfe8 R12: ffff88810477d990
<4> [217.584081] R13: 0000000000000001 R14: ffff8881185f6248 R15: 0000000000000000
<4> [217.584082] FS: 00007f981af8b140(0000) GS:ffff88849f000000(0000) knlGS:0000000000000000
<4> [217.584084] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [217.584085] CR2: 000055a77e6091c0 CR3: 00000001c674c000 CR4: 0000000000750ef0
<4> [217.584086] PKRU: 55555554
<4> [217.584087] Call Trace:
<4> [217.584088] <TASK>
<4> [217.584089] ? show_regs+0x67/0x70
<4> [217.584093] ? xe_pm_runtime_get_noresume+0x48/0x60 [xe]
<4> [217.584132] ? __warn+0x8e/0x1b0
<4> [217.584136] ? xe_pm_runtime_get_noresume+0x48/0x60 [xe]
<4> [217.584173] ? report_bug+0x1b7/0x1d0
<4> [217.584177] ? handle_bug+0x46/0x80
<4> [217.584180] ? exc_invalid_op+0x19/0x70
<4> [217.584182] ? asm_exc_invalid_op+0x1b/0x20
<4> [217.584187] ? xe_pm_runtime_get_noresume+0x48/0x60 [xe]
<4> [217.584224] xe_ggtt_remove_node+0x28/0x90 [xe]
<4> [217.584257] xe_ggtt_remove_bo+0x59/0x1d0 [xe]
<4> [217.584289] ? _raw_write_unlock+0x23/0x50
<4> [217.584290] ? drm_vma_offset_remove+0x66/0x80 [drm]
<4> [217.584319] xe_ttm_bo_destroy+0x135/0x230 [xe]
<4> [217.584348] ttm_bo_release+0x6e/0x320 [ttm]
<4> [217.584356] ? vunmap+0x4c/0x70
<4> [217.584360] ttm_bo_put+0x34/0x50 [ttm]
<4> [217.584365] xe_gem_object_free+0x1b/0x30 [xe]
<4> [217.584392] drm_gem_object_free+0x1a/0x30 [drm]
<4> [217.584415] xe_lrc_finish+0x56/0x70 [xe]
<4> [217.584454] xe_exec_queue_fini+0x30/0x90 [xe]
<4> [217.584485] __guc_exec_queue_fini_async+0xb0/0x160 [xe]
<4> [217.584522] guc_exec_queue_fini_async+0x89/0xc0 [xe]
<4> [217.584557] guc_exec_queue_fini+0x77/0x110 [xe]
<4> [217.584592] xe_exec_queue_destroy+0xb1/0xf0 [xe]
<4> [217.584623] xe_migrate_fini+0xbb/0x100 [xe]
<4> [217.584661] drm_managed_release+0xa9/0x160 [drm]
<4> [217.584684] drm_dev_release+0x38/0x50 [drm]
<4> [217.584704] drm_minor_release+0x39/0x50 [drm]
<4> [217.584722] drm_release_noglobal+0x6c/0x80 [drm]
<4> [217.584743] __fput+0xb9/0x310
<4> [217.584746] __fput_sync+0x1a/0x20
<4> [217.584748] __x64_sys_close+0x3e/0x80
<4> [217.584750] x64_sys_call+0x18e6/0x20c0
<4> [217.584753] do_syscall_64+0x88/0x140
<4> [217.584757] ? syscall_exit_to_user_mode+0xea/0x260
<4> [217.584760] ? do_syscall_64+0x94/0x140
<4> [217.584762] ? do_syscall_64+0x94/0x140
<4> [217.584765] ? restore_fpregs_from_fpstate+0x47/0xc0
<4> [217.584768] ? switch_fpu_return+0xd7/0x130
<4> [217.584771] ? syscall_exit_to_user_mode+0xea/0x260
<4> [217.584773] ? do_syscall_64+0x94/0x140
<4> [217.584775] ? do_syscall_64+0x94/0x140
<4> [217.584777] ? exc_page_fault+0xaa/0x2a0
<4> [217.584779] entry_SYSCALL_64_after_hwframe+0x76/0x7e
<4> [217.584782] RIP: 0033:0x7f981e2e0437
<4> [217.584783] Code: 64 89 02 48 c7 c0 ff ff ff ff eb bb 0f 1f 80 00 00 00 00 f3 0f 1e fa 64 8b 04 25 18 00 00 00 85 c0 75 10 b8 03 00 00 00 0f 05 <48> 3d 00 f0 ff ff 77 41 c3 48 83 ec 18 89 7c 24 0c e8 f3 fb ff ff
<4> [217.584785] RSP: 002b:00007ffd88658f08 EFLAGS: 00000246 ORIG_RAX: 0000000000000003
<4> [217.584787] RAX: ffffffffffffffda RBX: 00007f981af8b070 RCX: 00007f981e2e0437
<4> [217.584788] RDX: 0000000000000000 RSI: 000055ab20762c44 RDI: 0000000000000005
<4> [217.584789] RBP: 0000000000000005 R08: 0000000000000000 R09: 000000000000003e
<4> [217.584790] R10: 000055ab207623f1 R11: 0000000000000246 R12: 000055ab20762c44
<4> [217.584791] R13: 00007ffd88659210 R14: 0000000000000000 R15: 0000000000000000
<4> [217.584796] </TASK>
<4> [217.584797] irq event stamp: 309541
<4> [217.584798] hardirqs last enabled at (309547): [<ffffffff811b69ca>] console_unlock+0x13a/0x150
<4> [217.584800] hardirqs last disabled at (309552): [<ffffffff811b69af>] console_unlock+0x11f/0x150
<4> [217.584802] softirqs last enabled at (307018): [<ffffffff823cab46>] __do_softirq+0x316/0x441
<4> [217.584804] softirqs last disabled at (307013): [<ffffffff810f042b>] irq_exit_rcu+0x8b/0xb0
<4> [217.584806] ---[ end trace 0000000000000000 ]---